--- a/CSS/contato.css
+++ b/CSS/contato.css
@@ -85,3 +85,15 @@ img {
     width: 900px;
     margin-bottom: 30px;
 }
+
+.h1-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-container {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
